# my-earth

./: .gitignore  .golang-ci.yaml  BUILD  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
api/openapi/: BUILD  location.yaml  meteor_source.yaml
api/openapi/genapi/: BUILD.bazel  location.gen.go  meteo_source.gen.go
cmd/earth-server/: BUILD.bazel  earth-server.go
cmd/earth-server/config/: BUILD.bazel  config.go
infra/: compose.yml
infra/db/postgres/init/: mvp.sql
infra/envs/: earth.env
infra/jenkins/: Jenkinsfile
misc/diagrams/: enrich_weather.uml  find_locations.uml
misc/insomnia/: my_earth_insomnia.json
src/adapter/: BUILD.bazel  cached_repo.go  location_repo.go  meteo_source.go
src/adapter/db/: BUILD.bazel  location.sql.go  models.go
src/adapter/query/: location.sql
src/app/: BUILD.bazel  simple_wr.go  svc.go
src/domain/: BUILD.bazel  location.go  weather.go
src/infra/db/migrations/: 20240725004456_create_schemas.up.sql  20240725004653_create_tables.up.sql  20240725060252_add_column_expired_at_on_location.up.sql  20240725062627_add_col_temperature_unit_on_loc.up.sql  BUILD.bazel  migrate.go
src/pkg/coord/: BUILD.bazel  coord.go
src/pkg/generr/: BUILD.bazel
src/pkg/httpclient/: BUILD.bazel  transport_logger.go
src/pkg/psql/: BUILD.bazel  converter.go
src/pkg/ptr/: BUILD.bazel
src/pkg/workerpool/: BUILD.bazel  workerpool.go
src/port/: BUILD.bazel  err_mapper.go  http.go
