load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "earth-server_lib",
    srcs = ["earth-server.go"],
    importpath = "github.com/kennykarnama/my-earth/cmd/earth-server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/openapi/genapi",
        "//cmd/earth-server/config",
        "//src/adapter",
        "//src/app",
        "//src/pkg/workerpool",
        "//src/port",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "earth-server",
    embed = [":earth-server_lib"],
    visibility = ["//visibility:public"],
)
