load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "earth-server_lib",
    srcs = ["earth-server.go"],
    importpath = "github.com/kennykarnama/my-earth/cmd/earth-server",
    visibility = ["//visibility:private"],
    deps = [
        "//api/openapi/genapi",
        "//cmd/earth-server/config",
        "//src/adapter",
        "//src/app",
        "//src/pkg/workerpool",
        "//src/port",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_binary(
    name = "earth-server",
    embed = [":earth-server_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app_layer",
    srcs = [":earth-server"],
)

oci_image(
    name = "earth-server-image",
    base = "@go_base",
    entrypoint = ["/earth-server"],
    tars = [":app_layer"],
)

oci_tarball(
    name = "app_tarball",
    image = ":earth-server-image",
    repo_tags = ["earth-server:latest"],
)

oci_push(
    name = "push",
    image = ":earth-server-image",
    remote_tags = ["latest"],
    repository = "index.docker.io/kennykarnama/earth-server",
)
