load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "genapi",
    srcs = [
        "location.gen.go",
        "meteo_source.gen.go",
    ],
    importpath = "github.com/kennykarnama/my-earth/api/openapi/genapi",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_oapi_codegen_runtime//:runtime",
        "@com_github_oapi_codegen_runtime//types",
    ],
)
