load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "psql",
    srcs = [
        "converter.go",
        "pgx_tracer.go",
    ],
    importpath = "github.com/kennykarnama/my-earth/src/pkg/psql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
