load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "app_layer",
    srcs = [
        "20240725004456_create_schemas.down.sql",
        "20240725004456_create_schemas.up.sql",
        "20240725004653_create_tables.down.sql",
        "20240725004653_create_tables.up.sql",
        "20240725060252_add_column_expired_at_on_location.down.sql",
        "20240725060252_add_column_expired_at_on_location.up.sql",
        "20240725062627_add_col_temperature_unit_on_loc.down.sql",
        "20240725062627_add_col_temperature_unit_on_loc.up.sql",
    ],
)

oci_image(
    name = "earth-migrator-image",
    base = "@gomigrate_base",
    entrypoint = [
        "/migrate",
        "-verbose",
        "-path",
        "./",
    ],
    env = {
        "DSN": "",
    },
    tars = [":app_layer"],
)

oci_tarball(
    name = "app_tarball",
    image = ":earth-migrator-image",
    repo_tags = ["earth-migrator:latest"],
)

oci_push(
    name = "push",
    image = ":earth-migrator-image",
    remote_tags = ["latest"],
    repository = "index.docker.io/kennykarnama/earth-migrator",
)
